# CampusNavigation

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  main.cc
.github/workflows/: ci.yml
build_stable/.cmake/api/v1/reply/: cache-v2-be54c259ae0c59144d98.json  codemodel-v2-4a1d0fa36c654c429b5a.json  index-2021-05-15T01-50-48-0115.json  target-CampusNavigation_lib-Debug-c2f2c29a25bd653a337e.json  target-CampusNavigation_run-Debug-ade38a7e4248f29a8166.json  target-CampusNavigation_test-Debug-b22da9b97ab249549d42.json  target-gmock-Debug-6d721a91ced2fd341718.json  target-gmock_main-Debug-43d2f2a0ce8c4fc87e58.json  target-gtest-Debug-3408b06b512cc2d4be16.json  target-gtest_main-Debug-3ce8515dff6452f608d5.json
build_stable/src/: CampusNavigation_run
build_stable/test/: CampusNavigation_test[1]_include.cmake  CampusNavigation_test[1]_tests.cmake
build_stable/test/googletest-download/: CMakeLists.txt
build_stable/test/test_data/: map.csv
build_stable/test/test_data/algo/: algo_in_1.txt  algo_in_5.txt  algo_out_1.txt  algo_out_3.txt  algo_out_4.txt  algo_out_5.txt  model.csv
ext/googletest/googlemock/docs/: cook_book.md
gui/: README.md  fireup.sh  index.html
gui/css/: index.css
gui/js/: index.js
src/: CMakeLists.txt  main.cc
src/algo/: navigation.cc  navigation.h
src/boot/: bootloader.cc  bootloader.h
src/cli/: cli.hpp
src/error/: errors.hpp
src/json/: json_parser.cc  json_parser.cpp  json_parser.h
src/logger/: logger.cc  logger.cpp  logger.h
src/model/: model.cc  model.h  model_hub.cc  model_hub.h
src/model/logical/: course.cc  course.h  courseHub.cc  courseHub.h  courseList.csv  course_hub.cc  logical_model.cc  logical_model.h
src/model/physical/: building.cc  building.h  campus.cc  campus.h  path.cc  path.h  physical_model.cc  physical_model.h  transport.cc  transport.h
src/server/: server.c  server.cc  server.h
src/toki/: toki.hpp
test/: .clang-format  CMakeLists.txt  add.cc  main.cc
test/algo/: algo_test.cc  algo_test.in
test/cmake/: CMakeLists.txt.in
test/logger/: logger_test.cc
test/model/: model_test.cc
test/model/logical/: logical_model_test.cc
test/model/navigation/: navigation.cc
test/model/physical/: physical_model_test.cc
test/test_data/algo/: algo_in_3.txt  algo_in_4.txt  model.csv  model_1.csv  model_bak.csv  model_test.csv
test/toki/: toki.cc
tools/: map_generate.py  map_generate.py.ea29314bbecd7d13e51de69c29f9d447.tmp
